# thunderbolt

./: .editorconfig  .env.example  .eslintrc.cjs  .gitattributes  .gitignore  .lintstagedrc  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Makefile  README.md  RELEASE.md  RUST_CACHING_ANALYSIS.md  SECURITY-REVIEW.md  SECURITY.md  TELEMETRY.md  THUNDERBOLT_CONTEXT.md  TOKEN_VALIDATION_IMPLEMENTATION.md  VERIFICATION_GUIDE.md  astro.config.mjs  bun.lockb  bunfig.toml  check_workflow_timing.sh  cliff.toml  conflict-resolution-plan.md  drizzle.config.ts  e2e-encryption-implementation-plan.md  e2e-encryption-user-flows.md  eslint.config.js  happydom.ts  index.html  install.sh  lighthouserc.js  matchers.d.ts  package-lock.json  package.json  plan-feedback-fixes.md  (+22 more)
backend/: .dockerignore  .env.example  .env.test  .gitignore  HEALTHCHECK.md  README.md  bunfig.toml  config.py  drizzle.config.ts  env.example  eslint.config.js  healthcheck.py  main.py  package.json  proxy.py  pyproject.toml  request_utils.py  tsconfig.json
backend/auth/: google.py  microsoft.py
backend/docs/: amazon-realm.json  mozilla-realm.json  oidc-keycloak.md  oidc-local-dev.md  pat-lifecycle.md  saml-local-dev.md  testing.md
backend/drizzle/: 0000_superb_hannibal_king.sql  0001_gifted_ben_grimm.sql  0002_cheerful_ted_forrester.sql  0002_dazzling_krista_starr.sql  0002_goofy_millenium_guard.sql  0002_sad_sir_ram.sql  0003_gigantic_mandroid.sql  0003_gray_emma_frost.sql  0003_migration_version_sync.sql  0003_previous_barracuda.sql  0003_shiny_firestar.sql  0004_cold_blazing_skull.sql  0004_cold_colleen_wing.sql  0004_equal_red_skull.sql  0004_fluffy_blade.sql  0004_last_susan_delgado.sql  0004_lean_giant_girl.sql  0004_living_fixer.sql  0004_low_junta.sql  0004_powersync_publication.sql  0004_smooth_spirit.sql  0005_cheerful_hex.sql  0006_modern_annihilus.sql  0007_magenta_landau.sql  0008_ancient_rockslide.sql  0008_big_the_call.sql  0008_careful_black_tarantula.sql  0008_hesitant_texas_twister.sql  0008_known_shockwave.sql  0008_tired_killmonger.sql  0009_bored_piledriver.sql  0009_cheerful_bulldozer.sql  0010_low_nico_minoru.sql  0011_young_thor.sql  0012_furry_thor_girl.sql  0013_icy_lady_deathstrike.sql  0013_misty_mercury.sql  0013_next_ulik.sql  0014_revoke_limbo_devices.sql  0015_panoramic_sheva_callister.sql  (+22 more)
backend/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  0011_snapshot.json  0012_snapshot.json  0013_snapshot.json  0014_snapshot.json  0015_snapshot.json  0016_snapshot.json  0017_snapshot.json  0018_snapshot.json  0019_snapshot.json  0020_snapshot.json  0021_snapshot.json  0022_snapshot.json  0023_snapshot.json  0024_snapshot.json  0025_snapshot.json  _journal.json
backend/pro/: exa.py  exa_content_fetcher.py  models.py  openmeteo.py  routes.py
backend/scripts/: dev.sh
backend/src/: cluster.ts  index.ts  matchers.d.ts  swagger.test.ts  types.ts
backend/src/agent-proxy/: routes.test.ts  routes.ts
backend/src/agents/: discovery.ts  haystack-provider.test.ts  haystack-provider.ts  index.ts  routes.test.ts  routes.ts  types.ts
backend/src/api/: account.test.ts  account.ts  config.test.ts  config.ts  encryption.test.ts  encryption.ts  powersync.test.ts  powersync.ts  preview.e2e.test.ts  preview.ts  routes.test.ts  routes.ts  search.e2e.test.ts  search.ts  users.test.ts  users.ts
backend/src/auth/: auth-anonymous.test.ts  auth.test.ts  auth.ts  bearer-token.test.ts  bearer-token.ts  device-auth-apikey.test.ts  elysia-plugin.test.ts  elysia-plugin.ts  flower.test.ts  flower.ts  google.ts  jwt-rate-limit.test.ts  jwt-rate-limit.ts  media-jwt.test.ts  media-jwt.ts  microsoft.ts  microsoft.ts.orig  oidc-integration.test.ts  oidc.test.ts  oidc.ts  otp-constants.ts  otp-security.test.ts  routes.test.ts  saml-integration.test.ts  session-cookie-httponly.test.ts  sso-desktop-callback.test.ts  sso-desktop-callback.ts  tinfoil.test.ts  tinfoil.ts  types.ts  utils.test.ts  utils.ts  utils.tsx  waitlist-integration.test.ts  ws-bearer-auth.ts  ws-ticket-routes.test.ts  ws-ticket-routes.ts  ws-ticket-store.test.ts  ws-ticket-store.ts  ws-ticket.test.ts  (+1 more)
backend/src/coding-agent/: github-routes.test.ts  github-routes.ts  github.test.ts  github.ts  index.ts  provider.test.ts  provider.ts  provision.test.ts  provision.ts  proxy.test.ts  proxy.ts  routes.test.ts  routes.ts
backend/src/config/: cors-proxy-headers.test.ts  cors.test.ts  insecure-defaults-warning.ts  instrumentation.ts  logger.ts  (+2 more)
backend/tests/: test_analytics_config.py  test_exa_content_fetcher.py  test_exa_endpoint.py  test_flower_live.py  test_healthcheck.py  test_posthog_config.py  test_posthog_proxy.py  test_pro_tools.py  test_proxy.py
crates/thunderbolt-acp-client/: Cargo.toml  README.md  build.sh  rust-toolchain.toml
src-tauri/: .gitignore  Cargo.toml  build.rs  env.example  tauri.conf.json  tauri.dev.conf.json  test-embeddings.js
src-tauri/.cargo/: config.toml
src-tauri/assist_embeddings/: Cargo.toml  README.md  run_example.sh
src-tauri/assist_imap_sync/: Cargo.toml
src-tauri/capabilities/: auth.json  default.json
src-tauri/entity/: Cargo.toml
src-tauri/examples/: embed.rs  imap.rs  mistral.rs  seaorm.rs  summarize-many.rs
src-tauri/icons/: icon.icns
src-tauri/resources/: ghostcat.service.template  ghostcat.timer.template  install-schedule-linux.sh  install-schedule-macos.sh  install-schedule-windows.ps1  net.thunderbird.ghostcat.plist.template
src-tauri/src/: agent_spawn.rs  cli_installer.rs  commands.rs  db.rs  embedding.rs  imap_client.rs  lib.rs  main.rs  oauth_server.rs  platform_utils.rs  state.rs
src-tauri/thunderbolt_bridge/: Cargo.toml
src-tauri/thunderbolt_email/: Cargo.toml
src-tauri/thunderbolt_embeddings/: Cargo.toml  README.md
src-tauri/thunderbolt_imap_client/: Cargo.toml
src-tauri/thunderbolt_imap_sync/: Cargo.toml
src-tauri/thunderbolt_libsql/: Cargo.toml
(+2879 files in other folders)
