[project]
name = "thunderbolt"
version = "0.1.0"
description = "Backend for Thunderbolt"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Chris Roth", email = "chris@cjroth.com" }]
license = { text = "Mozilla Public License 2.0" }
keywords = ["fastapi", "proxy", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "brotli>=1.1.0",
    "exa-py>=1.0.0",
    "fastapi[standard]>=0.115.6",
    "httpx>=0.28.1",
    "pydantic-settings>=2.7.0",
    "websockets>=14.1",
    "mcp>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
    "ARG001", # unused function arguments (common in FastAPI)
    "E722", # bare except (sometimes needed)
]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "httpx"]

[tool.ty]
# ty-specific configuration
# Since ty is in alpha, configuration options are limited
# We use command-line flags for ignoring rules that are too strict

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=.",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=15",
]

[tool.coverage.run]
source = ["."]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["*.py"]
exclude = ["tests/", "*.pyc", "__pycache__/"]

[dependency-groups]
prod = ["gunicorn>=22.0.0"]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.5.0",
    "ty>=0.0.1a8",
    "types-beautifulsoup4>=4.12.0",
    "pre-commit>=3.7.0",
    "httpx[http2]>=0.28.1", # For testing HTTP/2
]
