[package]
name = "thunderbolt"
version = "0.1.14"
description = "Privacy-respecting AI assistant."
authors = ["Chris Roth <chris@cjroth.com>"]
license = "MPL-2.0"
edition = "2021"
default-run = "thunderbolt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "thunderbolt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
libsql = ["dep:thunderbolt-libsql"]
email = [
    "dep:thunderbolt-email",
    "dep:thunderbolt-imap-client",
    "dep:thunderbolt-imap-sync",
    "libsql",
]
embeddings = ["dep:thunderbolt-embeddings"]
bridge = ["dep:thunderbolt-bridge"]
native_fetch = []
all = ["libsql", "email", "embeddings", "bridge", "native_fetch"]

[workspace]
members = [
    "thunderbolt_imap_client",
    "thunderbolt_imap_sync",
    "thunderbolt_embeddings",
    "thunderbolt_bridge",
    "thunderbolt_libsql",
    "thunderbolt_email",
]

[workspace.dependencies]
# Use Thunderbird's fork with Windows build fix
# See: https://github.com/thunderbird/libsql/commit/91d0ff37dc37f2397b39662b0727b500a93fdb32
libsql = { version = "0.9.20", default-features = false, features = [
    "core",
    "encryption",
] }
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
thunderbolt-lib = { path = "." }

[[bin]]
name = "thunderbolt"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.1", features = [
    "tray-icon",
    "devtools",
    "unstable",  # Required for webview
] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-shell = "2.3.3"
tauri-plugin-os = "2.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
tokio = "1.47.1"
tauri-plugin-devtools = "2.0.1"
tauri-plugin-http = "2.5.4"
tauri-plugin-process = "2.3.1"
tauri-plugin-fs = "2.4.4"
thunderbolt-imap-client = { package = "thunderbolt-imap-client", path = "./thunderbolt_imap_client", optional = true }
thunderbolt-imap-sync = { package = "thunderbolt-imap-sync", path = "./thunderbolt_imap_sync", optional = true }
thunderbolt-embeddings = { package = "thunderbolt-embeddings", path = "./thunderbolt_embeddings", optional = true }
thunderbolt-bridge = { package = "thunderbolt-bridge", path = "./thunderbolt_bridge", optional = true }
thunderbolt-libsql = { package = "thunderbolt-libsql", path = "./thunderbolt_libsql", optional = true }
thunderbolt-email = { package = "thunderbolt-email", path = "./thunderbolt_email", optional = true }

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.dev.package]
"candle-nn" = { opt-level = 3, debug = false }
"candle-core" = { opt-level = 3, debug = false }
"candle-transformers" = { opt-level = 3, debug = false }

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
