[package]
name = "thunderbolt"
version = "0.1.92"
description = "Privacy-respecting AI assistant."
authors = ["Chris Roth <chris@cjroth.com>"]
license = "MPL-2.0"
edition = "2021"
default-run = "thunderbolt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "thunderbolt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
native_fetch = []

[workspace]
members = []
default-members = ["."]

[[bin]]
name = "thunderbolt"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [
    "tray-icon",
    "devtools",
    "unstable",  # Required for webview
] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-os = "2.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
tokio = "1.47.1"
tauri-plugin-devtools = "2.0.1"
tauri-plugin-http = "2.5.4"
tauri-plugin-process = "2.3.1"
tauri-plugin-fs = "2.4.4"
tauri-plugin-deep-link = "2.3"
tauri-plugin-haptics = "2.3"
tauri-plugin-updater = "2.3"
tauri-plugin-store = "2.4.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "ios")'.dependencies]
objc2-ui-kit = { version = "0.3.2", features = ["UIApplication", "UIWindow", "UIInterface", "UIScene", "UIWindowScene"] }
objc2-foundation = "0.3.2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
