[package]
name = "thunderbolt"
version = "0.1.108"
description = "Privacy-respecting AI assistant."
authors = ["Chris Roth <chris@cjroth.com>"]
license = "MPL-2.0"
edition = "2021"
default-run = "thunderbolt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "thunderbolt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
native_fetch = []

[workspace]
members = []
default-members = ["."]

[[bin]]
name = "thunderbolt"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [
    "tray-icon",
    "devtools",
    "unstable",  # Required for webview
] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-os = "2.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.150"
anyhow = "1.0.99"
tokio = "1.52.3"

# CLI installer: download the prebuilt `thunderbolt` binary + SHA256SUMS and
# verify the checksum before install. rustls (no OpenSSL) matches the rest of the
# app's TLS stack; all three are already transitive deps so no new versions land.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
tauri-plugin-devtools = "2.0.1"
tauri-plugin-http = "2.5.9"
tauri-plugin-process = "2.3.1"
tauri-plugin-fs = "2.4.4"
tauri-plugin-deep-link = "2.4"
tauri-plugin-haptics = "2.3"
tauri-plugin-updater = "2.3"
tauri-plugin-store = "2.4.3"

# Used only in debug builds to install a rustls crypto provider before
# tauri-plugin-devtools' reqwest stack initializes (otherwise iOS dev panics
# at first HTTPS call: "No provider set"). Already a transitive dep via reqwest.
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "ios")'.dependencies]
objc2-ui-kit = { version = "0.3.2", features = ["UIApplication", "UIWindow", "UIInterface", "UIScene", "UIWindowScene"] }
objc2-foundation = "0.3.2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
