[package]
name = "assist_embeddings"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
libsql = { version = "0.6.0", features = ["encryption"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
# Dependencies for embedding functionality
candle-nn = { version = "0.8.3", features = ["metal"] }
candle-core = { version = "0.8.3", features = ["metal"] }
candle-transformers = { version = "0.8.3", features = ["metal"] }
hf-hub = "0.4.2"
tokenizers = "0.21.1"
uuid = { version = "1.16.0", features = ["v7", "rng"] }

[[example]]
name = "generate_embeddings"
path = "examples/generate_embeddings.rs"

[[example]]
name = "test_embeddings"
path = "examples/test_embeddings.rs"
