[package]
name = "assist_imap_sync"
version = "0.1.0"
edition = "2021"

[dependencies]
assist_imap_client = { path = "../assist_imap_client" }
anyhow = "1.0.97"
chrono = "0.4"
libsql = { git = "https://github.com/libsql/libsql.git", rev = "d980ce13b9c4b3f05b03dd1b9ca2fb2765c0cb68", features = [
    "encryption"
] }
mail-parser = { version = "0.10.2", features = ["serde_support"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = { version = "1.15.1", features = ["v7", "serde"] }
tokio = { version = "1.44.1", features = ["full"] }
regex = "1.11.1"
