[package]
name = "thunderbolt-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
tokio-tungstenite = "0.24"
tungstenite = "0.24"
axum = { version = "0.7", features = ["ws", "json"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.5.2", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io", "codec"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.18", features = ["v4", "serde"] }
dashmap = "6.1"
anyhow = "1.0.99"
thiserror = "2.0"
tokio-stream = "0.1"
async-stream = "0.3"
bytes = "1"
headers = "0.4"
lazy_static = "1.5.0"
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12.23", features = ["json"] }
