[package]
name = "thunderbolt-email"
version = "0.1.0"
edition = "2021"
description = "Email functionality for Thunderbolt"
authors = ["Thunderbolt Team"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.143"
tauri = { version = "2.8.2", features = [] }
tokio = { version = "1.47.1", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }

# IMAP dependencies
thunderbolt-imap-client = { package = "thunderbolt-imap-client", path = "../thunderbolt_imap_client" }
thunderbolt-imap-sync = { package = "thunderbolt-imap-sync", path = "../thunderbolt_imap_sync" }

# Dependencies on other crates
thunderbolt-libsql = { package = "thunderbolt-libsql", path = "../thunderbolt_libsql" }
thunderbolt-embeddings = { package = "thunderbolt-embeddings", path = "../thunderbolt_embeddings" } 
