[package]
name = "thunderbolt-embeddings"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
libsql = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
# Dependencies for embedding functionality
candle-nn = { version = "0.9.1" }
candle-core = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
hf-hub = "0.4.3"
tokenizers = "0.21.1"
uuid = { version = "1.17.0", features = ["v7", "rng"] }
rayon = "1.10.0"
tauri = { version = "2.5.1", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
candle-nn = { version = "0.9.1", features = ["metal"] }
candle-core = { version = "0.9.1", features = ["metal"] }
# candle-transformers = { version = "0.9.0-alpha.5", features = ["metal"] }

[[example]]
name = "generate_embeddings"
path = "examples/generate_embeddings.rs"

[[example]]
name = "test_embeddings"
path = "examples/test_embeddings.rs"

[[example]]
name = "test_quantized_embeddings"
path = "examples/test_quantized_embeddings.rs"
