[package]
name = "thunderbolt-imap-client"
version = "0.1.0"
edition = "2021"
description = "IMAP client for Thunderbolt"
authors = ["Thunderbolt Team"]

[dependencies]
imap = "3.0.0-alpha.15"
native-tls = "0.2.14"
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
mail-parser = { version = "0.10.2", features = ["serde_support"] }
regex = "1.11.1"
dotenv = "0.15.0"
tokio = { version = "1.47.1", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["full", "macros"] }
