[package]
name = "thunderbolt-imap-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
thunderbolt-imap-client = { path = "../thunderbolt_imap_client" }
anyhow = "1.0.99"
chrono = "0.4.41"
libsql = { workspace = true }
mail-parser = { version = "0.10.2", features = ["serde_support"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
uuid = { version = "1.18.0", features = ["v7", "serde"] }
tokio = { version = "1.47.1", features = ["full"] }
regex = "1.11.1"
