[package]
name = "thunderbolt-libsql"
version = "0.1.0"
edition = "2021"
description = "LibSQL database functionality for Thunderbolt"
authors = ["Thunderbolt Team"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.140"
libsql = { workspace = true }
tauri = { version = "2.5.1", features = [] }
tokio = { version = "1.45.1", features = ["full"] }
base64 = "0.22.1"
bytes = "1.10.1"
